--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@ session_start();
                 <div class="masthead-heading text-uppercase">Brighton Events Hub!</div>
             </div>
         </header>
+        <!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand" href="/brighton_events/home.php">Brighton Events Hub</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars ms-1"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                <li class="nav-item"><a class="nav-link" href="/brighton_events/home.php">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#portfolio">Societies</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">Nightlife</a></li>
+                <li class="nav-item"><a class="nav-link" href="#team">Sporting</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.php">Login</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
