--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ session_start();
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <i class="fa-solid fa-people-group fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Societies</h4>
                         <p class="text-muted"></p>
@@ -79,7 +79,7 @@ session_start();
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                            <i class="fa-solid fa-champagne-glasses fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Nightlife</h4>
                         <p class="text-muted"></p>
@@ -87,7 +87,7 @@ session_start();
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                            <i class="fa-regular fa-futbol fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Sporting</h4>
                         <p class="text-muted"></p>
