--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
 								</div>
 
 								<div>
-									<p class="mb-0">Don't have an account? <a href="registration.php" class="text-white-50 fw-bold">Sign Up</a>
+									<p class="mb-0">Don't have an account? <a href="registration.html" class="text-white-50 fw-bold">Sign Up</a>
 									</p>
 								</div>
 
