--- a/registration.html
+++ b/registration.html
@@ -63,7 +63,7 @@
 
                             <p class="text-center text-muted mt-5 mb-0">
                                 Have already an account? 
-                                <a href="login.php" class="fw-bold text-body">
+                                <a href="login.html" class="fw-bold text-body">
                                     <u>Login here</u>
                                 </a>
                             </p>
