--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ session_start();
                 <li class="nav-item"><a class="nav-link" href="#portfolio">Societies</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">Nightlife</a></li>
                 <li class="nav-item"><a class="nav-link" href="#team">Sporting</a></li>
-                <li class="nav-item"><a class="nav-link" href="login.php">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
             </ul>
         </div>
     </div>
