--- a/login.html
+++ b/login.html
@@ -55,7 +55,24 @@
 				<p>Not a member? <a href="registration.php">Register</a></p>
 			</div>
 		</form> -->
-		<?php include("nav.php") ?>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+		    <div class="container">
+			<a class="navbar-brand" href="/brighton_events/home.php">Brighton Events Hub</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			    Menu
+			    <i class="fas fa-bars ms-1"></i>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+			    <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+				<li class="nav-item"><a class="nav-link" href="/brighton_events/home.php">Home</a></li>
+				<li class="nav-item"><a class="nav-link" href="#portfolio">Societies</a></li>
+				<li class="nav-item"><a class="nav-link" href="#about">Nightlife</a></li>
+				<li class="nav-item"><a class="nav-link" href="#team">Sporting</a></li>
+				<li class="nav-item"><a class="nav-link" href="login.php">Login</a></li>
+			    </ul>
+			</div>
+		    </div>
+		</nav>
 		<section class="vh-100 gradient-custom">
 			<div class="container py-5 h-100">
 				<div class="row d-flex justify-content-center align-items-center h-100">
